--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://hmshp.github.io/daangn-market-clone",
   "name": "hondangmu-market",
   "version": "0.1.0",
   "private": true,
