--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://hmshp.github.io/daangn-market-clone",
   "name": "hondangmu-market",
   "version": "0.1.0",
   "private": true,
@@ -10,8 +9,10 @@
     "gh-pages": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
